[gd_scene load_steps=11 format=3 uid="uid://bmhhcw7wjro4l"]

[ext_resource type="Script" path="res://scenes/map_controller.gd" id="1_0j483"]
[ext_resource type="Texture2D" uid="uid://bbh4ryk1mi3u6" path="res://assets/sprites/barco-grande.png" id="2_33n60"]
[ext_resource type="Texture2D" uid="uid://buirb5qfqk2yd" path="res://assets/sprites/Atlas.png" id="3_hn4lp"]
[ext_resource type="PackedScene" uid="uid://c21t1t84okty6" path="res://scenes/UI_scenes/money_display.tscn" id="4_1n1qu"]
[ext_resource type="AudioStream" uid="uid://d31e7a5lustns" path="res://assets/sfx/sfx_bigBubble1.wav" id="4_pr8p7"]
[ext_resource type="AudioStream" uid="uid://i0ajtculjn50" path="res://assets/music/Music_Theme1.wav" id="5_bjftn"]
[ext_resource type="AudioStream" uid="uid://bkuca5jelqb5i" path="res://assets/music/MusicTheme4_IceSea.wav" id="6_20wfg"]
[ext_resource type="AudioStream" uid="uid://dd1st7ktuecqt" path="res://assets/music/MusicTheme3_WarmWaters.wav" id="7_maw6y"]
[ext_resource type="AudioStream" uid="uid://b4m282wbaaxem" path="res://assets/music/MusicTheme2_CoralSea.wav" id="8_2dwpl"]
[ext_resource type="AudioStream" uid="uid://c1ypkchxptsrx" path="res://assets/music/MusicTheme5_AbyssalSea.wav" id="9_f750t"]

[node name="Map" type="Node2D"]
script = ExtResource("1_0j483")
boat_positions = Array[Vector2]([Vector2(-403, 200), Vector2(-375, -268), Vector2(412, -258), Vector2(-13, 260), Vector2(492, 216)])

[node name="Camera2D" type="Camera2D" parent="."]

[node name="boat" type="Sprite2D" parent="."]
position = Vector2(492, 216)
scale = Vector2(0.289792, 0.289792)
texture = ExtResource("2_33n60")

[node name="Interface" type="Control" parent="."]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Interface"]
layout_mode = 0
offset_left = -576.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 301.0
scale = Vector2(1, 1.03744)
texture = ExtResource("3_hn4lp")

[node name="TutorialButton" type="Button" parent="Interface/TextureRect"]
layout_mode = 0
offset_left = -1.0
offset_top = 409.0
offset_right = 271.0
offset_bottom = 625.0
flat = true

[node name="Bubble" type="AudioStreamPlayer2D" parent="Interface/TextureRect/TutorialButton"]
stream = ExtResource("4_pr8p7")

[node name="TutorialSong" type="AudioStreamPlayer2D" parent="Interface/TextureRect/TutorialButton"]
stream = ExtResource("5_bjftn")

[node name="IceButton" type="Button" parent="Interface/TextureRect"]
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 418.0
offset_bottom = 213.0
flat = true

[node name="Bubble" type="AudioStreamPlayer2D" parent="Interface/TextureRect/IceButton"]
stream = ExtResource("4_pr8p7")

[node name="IceSong" type="AudioStreamPlayer2D" parent="Interface/TextureRect/IceButton"]
stream = ExtResource("6_20wfg")

[node name="HeatButton" type="Button" parent="Interface/TextureRect"]
layout_mode = 0
offset_left = 798.0
offset_top = -2.0
offset_right = 1152.0
offset_bottom = 176.0
flat = true

[node name="Bubble" type="AudioStreamPlayer2D" parent="Interface/TextureRect/HeatButton"]
stream = ExtResource("4_pr8p7")

[node name="HeatSong" type="AudioStreamPlayer2D" parent="Interface/TextureRect/HeatButton"]
stream = ExtResource("7_maw6y")

[node name="CoraisButton" type="Button" parent="Interface/TextureRect"]
layout_mode = 0
offset_left = 508.0
offset_top = 336.0
offset_right = 664.0
offset_bottom = 542.0
flat = true

[node name="Bubble" type="AudioStreamPlayer2D" parent="Interface/TextureRect/CoraisButton"]
stream = ExtResource("4_pr8p7")

[node name="CoralSong" type="AudioStreamPlayer2D" parent="Interface/TextureRect/CoraisButton"]
stream = ExtResource("8_2dwpl")

[node name="AbyssButton" type="Button" parent="Interface/TextureRect"]
layout_mode = 0
offset_left = 917.0
offset_top = 332.0
offset_right = 1153.0
offset_bottom = 624.0
flat = true

[node name="Bubble" type="AudioStreamPlayer2D" parent="Interface/TextureRect/AbyssButton"]
stream = ExtResource("4_pr8p7")

[node name="AbyssSong" type="AudioStreamPlayer2D" parent="Interface/TextureRect/AbyssButton"]
stream = ExtResource("9_f750t")

[node name="MoneyDisplay" parent="." instance=ExtResource("4_1n1qu")]
offset_left = -562.0
offset_top = -314.0
offset_right = -562.0
offset_bottom = -314.0

[connection signal="mouse_entered" from="Interface/TextureRect/TutorialButton" to="Interface/TextureRect/TutorialButton/TutorialSong" method="play"]
[connection signal="mouse_exited" from="Interface/TextureRect/TutorialButton" to="Interface/TextureRect/TutorialButton/TutorialSong" method="stop"]
[connection signal="pressed" from="Interface/TextureRect/TutorialButton" to="Interface/TextureRect/TutorialButton/Bubble" method="play"]
[connection signal="mouse_entered" from="Interface/TextureRect/IceButton" to="Interface/TextureRect/IceButton/IceSong" method="play"]
[connection signal="mouse_exited" from="Interface/TextureRect/IceButton" to="Interface/TextureRect/IceButton/IceSong" method="stop"]
[connection signal="pressed" from="Interface/TextureRect/IceButton" to="Interface/TextureRect/IceButton/Bubble" method="play"]
[connection signal="mouse_entered" from="Interface/TextureRect/HeatButton" to="Interface/TextureRect/HeatButton/HeatSong" method="play"]
[connection signal="mouse_exited" from="Interface/TextureRect/HeatButton" to="Interface/TextureRect/HeatButton/HeatSong" method="stop"]
[connection signal="pressed" from="Interface/TextureRect/HeatButton" to="Interface/TextureRect/HeatButton/Bubble" method="play"]
[connection signal="mouse_entered" from="Interface/TextureRect/CoraisButton" to="Interface/TextureRect/CoraisButton/CoralSong" method="play"]
[connection signal="mouse_exited" from="Interface/TextureRect/CoraisButton" to="Interface/TextureRect/CoraisButton/CoralSong" method="stop"]
[connection signal="pressed" from="Interface/TextureRect/CoraisButton" to="Interface/TextureRect/CoraisButton/Bubble" method="play"]
[connection signal="mouse_entered" from="Interface/TextureRect/AbyssButton" to="Interface/TextureRect/AbyssButton/AbyssSong" method="play"]
[connection signal="mouse_exited" from="Interface/TextureRect/AbyssButton" to="Interface/TextureRect/AbyssButton/AbyssSong" method="stop"]
[connection signal="pressed" from="Interface/TextureRect/AbyssButton" to="Interface/TextureRect/AbyssButton/Bubble" method="play"]
